<resources>
    <string name="app_name"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="k">K</string>
    <string name="j">J</string>
    <string name="platinum_rs_300">Platinum Rs. 300</string>
    <string name="gold_rs_200">Gold Rs. 200</string>
    <string name="i">I</string>
    <string name="h">H</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="g">G</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="silver_rs_150">Silver Rs. 150</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="colonString">:</string>
    <string name="available">Available</string>
    <string name="selected">Selected</string>
    <string name="sold">Sold</string>
    <string name="movie">Movie</string>
    <string name="ps_2">Ponniyin Selvan: II</string>
    <string name="seat_nos">Seat Nos</string>
    <string name="amount">Amount</string>
    <string name="button">Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="login_with_google_string">Login with Google</string>
    <string name="login_with_facebook_string">Login with Facebook</string>
    <string name="or_string">Or</string>
    <string name="signup_string">Signup</string>
    <string name="don_t_have_an_account__string">Don\'t have an account? </string>
    <string name="already_have_an_account__string">Already have an account? </string>
    <string name="button_login_string">Login</string>
    <string name="forgot_password__string">Forgot Password?</string>
    <string name="enter_your_password_string">Enter Your Password</string>
    <string name="enter_your_username___email_string">Enter Your Username / Email</string>
    <string name="enter_your_phone_number_string">Enter Your Phone Number</string>
    <string name="login_text">Login</string>
    <string name="welcome_text">Welcome To MovieTime!</string>
    <string name="enter_your_email_string">Enter Your Email</string>
    <string name="enter_your_username_string">Enter Your Username</string>
    <string name="it_s_me_devesh_ukalkar_string">Its Me Devesh Ukalkar</string>
    <string name="change_pswd">Change Password</string>
    <string name="confirm_pswd">Confirm Password</string>
    <string name="verify_code">Verification Code</string>
    <string name="verify_msg">We\'ve have sent verification code to your phone number</string>
    <string name="otp_not_received">Didn\'t Received OTP</string>
    <string name="resend">Resend</string>
    <string name="null_msg">Null</string>
    <string name="submit">Submit</string>

    <string name="facebook_app_id">147160301380429</string>
    <string name="fb_login_protocol_scheme">06ad1dbe5be21b486375621c8cd46f63</string>
    <string name="facebook_client_token">b890749f511faa7f4c229725d7e2f966</string>
    <string name="email_phone"><![CDATA[Enter Email & Phone Number To Continue]]></string>

    <string name="book_now_string">Book Now | $80.32</string>
    <string name="_2_ticket_string">2 TICKET</string>
    <string name="d5__d6__d7_string">D5, D6, D7</string>
    <string name="service_fee_string">SERVICE FEE</string>
    <string name="__1_20_x_1_string">$1.20 x 1</string>
    <string name="regular_seat_string">REGULAR SEAT</string>
    <string name="__80_32_x_3_string">$80.32 x 3</string>
    <string name="order_number___string">ORDER NUMBER :</string>
    <string name="_3747234084598_string">3747234084598</string>
    <string name="order_summary_string">Order Summary</string>
    <string name="orion_mall_panvel_string">Orion Mall Panvel</string>
    <string name="spider_man_no_way_home_string">Spider Man No Way Home</string>
    <string name="adventure_string">Adventure</string>
    <string name="friday__21_apr_2023__16_00_string">Friday, 21 Apr 2023. 16:00</string>
    <string name="complete_your_payment_in_string">Complete your payment in</string>
    <string name="_01_34_12_string">01:34:12</string>
    <string name="___________0783_7873_string">**** **** 0783 7873</string>
    <string name="mastercard_string">MasterCard</string>
    <string name="payment_method_string">Payment Method</string>
    <string name="ticket_string">Ticket</string>
    <string name="show_this_ticket_at_the_entrance_string">Show this ticket at the entrance</string>
    <string name="orion_mall__panvel_string">Orion Mall, Panvel</string>
    <string name="cinema_string">Cinema</string>
    <string name="_06_apr_2022_string">06 Apr 2022</string>
    <string name="_18_00_string">18:00</string>
    <string name="time_string">Time</string>
    <string name="date_string">Date</string>
    <string name="_4_string">4</string>
    <string name="d2__d3__d4_string">D2, D3, D4</string>
    <string name="seat_string">Seat</string>
    <string name="section_string">Section</string>
    <string name="__80_32_string">$80.32</string>
    <string name="_2498759427_string">2498759427</string>
    <string name="order_id_string">Order ID</string>
    <string name="cost_string">Cost</string>
    <string name="movieimage">MovieImage</string>
    <string name="imgshadow">shadow</string>
    <string name="trailerbtn">trailer</string>
    <string name="ratings">ratings</string>
    <string name="_7_8_10">7.8/10</string>
    <string name="description">Description</string>
</resources>